--- a/crescentmax/_layouts/default.html
+++ b/crescentmax/_layouts/default.html
@@ -3,6 +3,7 @@
 
 <!doctype html>
 {% include copyright.html %}
+<link rel="icon" href="{{ '/assets/images/PFP_Circle.png' | relative_url }}" type="image/png" />
 <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="{{ '/assets/css/overall.css' | relative_url }}">
 <html lang="{{ site.locale | replace: "_", "-" | default: "en" }}" class="no-js">
