--- a/crescentmax/_layouts/post.html
+++ b/crescentmax/_layouts/post.html
@@ -43,6 +43,15 @@ layout: default
     {% if page.share %}
       {% include social-share.html %}
     {% endif %}
+
+    <div class="post-meta">
+      <p>Posted in {{ page.categories | join: ', ' }} under</p>
+      <p>Tags: 
+        {% for tag in page.tags %}
+          <a href="{{ site.baseurl }}/tag/{{ tag | slugify }}">{{ tag }}</a>{% unless forloop.last %}, {% endunless %}
+        {% endfor %}
+      </p>
+    </div>
   </article>
 </div>
 
