--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -21,7 +21,7 @@
 }
 
 .project-card {
-  background-color: #1b1b1b;
+  background-color: rgb(26, 29, 36);
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
