--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -43,7 +43,8 @@ layout: default
     {% if page.share %}
       {% include social-share.html %}
     {% endif %}
-
+    
+    <!-- Footer 
     <div class="post-meta">
       <p>Posted in {{ page.categories | join: ', ' }} under</p>
       <p>Tags: 
@@ -52,6 +53,7 @@ layout: default
         {% endfor %}
       </p>
     </div>
+    -->
   </article>
 </div>
 
