--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -1,38 +1,21 @@
 /* ==========================================================================
-   ARCHIVE
-   ========================================================================== */
-.archive-page .archive {
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start; 
-  width: 100%;
-  max-width: 800px;
-  padding-left: 15px;
-  padding-right: 15px;
-  
-  @include breakpoint($large) {
-    padding-right: 0; /* Remove padding to prevent shifting */
-  }
-}
+ ARCHIVE
+ ========================================================================== */
 
-.archive-page .archive__item {
-  max-width: 800px;
-  margin-bottom: 1.5em;
-
-}
-
-.archive-page .page__title {
-  text-align: left; /* Ensures the title is left-aligned */
-  margin-left: 0; /* Remove any unintended centering margins */
-  margin-right: auto; /* Optional: Add this to prevent auto centering */
-}
-
-
-.archive {
+ .archive {
+  margin-top: 1em;
   margin-bottom: 2em;
-  margin-left: auto;
-  margin-right: auto;
+
+  @include breakpoint($large) {
+    float: inline-end;
+    width: calc(100% - #{$right-sidebar-width-narrow});
+    padding-inline-end: $right-sidebar-width-narrow;
+  }
+
+  @include breakpoint($x-large) {
+    width: calc(100% - #{$right-sidebar-width});
+    padding-inline-end: $right-sidebar-width;
+  }
 }
 
 .archive__item {
@@ -49,12 +32,11 @@
 }
 
 .archive__subtitle {
-  padding-top: 0.5em;
+  margin: 1.414em 0 0.5em;
   padding-bottom: 0.5em;
   font-size: $type-size-5;
   color: $muted-text-color;
   border-bottom: 1px solid $border-color;
-  margin-top: 9px;
 
   + .list__item .archive__item-title {
     margin-top: 0.5em;
@@ -71,10 +53,7 @@
   a[rel="permalink"]::before {
     content: '';
     position: absolute;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
+    inset: 0;
   }
 
   a + a {
@@ -82,8 +61,17 @@
   }
 }
 
+/* remove border*/
+.page__content {
+  .archive__item-title {
+    margin-top: 1em;
+    border-bottom: none;
+  }
+}
 
 .archive__item-excerpt {
+  margin-top: 0;
+  font-size: $type-size-6;
 
   & + p {
     text-indent: 0;
@@ -107,14 +95,14 @@
 .archive__item-caption {
   position: absolute;
   bottom: 0;
-  right: 0;
+  inset-inline-end: 0;
   margin: 0 auto;
   padding: 2px 5px;
   color: #fff;
   font-family: $caption-font-family;
   font-size: $type-size-8;
   background: #000;
-  text-align: right;
+  text-align: end;
   z-index: 5;
   opacity: 0.5;
   border-radius: $border-radius 0 0 0;
@@ -144,29 +132,40 @@
    Grid view
    ========================================================================== */
 
+.archive {
+  .grid__wrapper {
+    /* extend grid elements to the right */
 
+    @include breakpoint($large) {
+      margin-inline-end: -1 * $right-sidebar-width-narrow;
+    }
+
+    @include breakpoint($x-large) {
+      margin-inline-end: -1 * $right-sidebar-width;
+    }
+  }
+}
 
 .grid__item {
   margin-bottom: 2em;
 
   @include breakpoint($small) {
-    float: left;
+    float: inline-start;
     width: span(5 of 10);
 
     &:nth-child(2n + 1) {
       clear: both;
-      margin-left: 0;
+      margin-inline-start: 0;
     }
 
     &:nth-child(2n + 2) {
       clear: none;
-      margin-left: gutter(of 10);
+      margin-inline-start: gutter(of 10);
     }
   }
 
   @include breakpoint($medium) {
-    margin-left: 0; /* override margin*/
-    margin-right: 0; /* override margin*/
+    margin-inline: 0; /* override margin*/
     width: span(3 of 12);
 
     &:nth-child(2n + 1) {
@@ -179,17 +178,17 @@
 
     &:nth-child(4n + 2) {
       clear: none;
-      margin-left: gutter(1 of 12);
+      margin-inline-start: gutter(1 of 12);
     }
 
     &:nth-child(4n + 3) {
       clear: none;
-      margin-left: gutter(1 of 12);
+      margin-inline-start: gutter(1 of 12);
     }
 
     &:nth-child(4n + 4) {
       clear: none;
-      margin-left: gutter(1 of 12);
+      margin-inline-start: gutter(1 of 12);
     }
   }
 
@@ -238,6 +237,7 @@
 .feature__wrapper {
   @include clearfix();
   margin-bottom: 2em;
+  border-bottom: 1px solid $border-color;
 
   .archive__item-title {
     margin-bottom: 0;
@@ -250,23 +250,23 @@
   font-size: 1.125em;
 
   @include breakpoint($small) {
-    float: left;
+    float: inline-start;
     margin-bottom: 0;
     width: span(4 of 12);
 
     &:nth-child(3n + 1) {
       clear: both;
-      margin-left: 0;
+      margin-inline-start: 0;
     }
 
     &:nth-child(3n + 2) {
       clear: none;
-      margin-left: gutter(of 12);
+      margin-inline-start: gutter(of 12);
     }
 
     &:nth-child(3n + 3) {
       clear: none;
-      margin-left: gutter(of 12);
+      margin-inline-start: gutter(of 12);
     }
 
     .feature__item-teaser {
@@ -276,114 +276,89 @@
   }
 
   .archive__item-body {
-    padding-left: gutter(1 of 12);
-    padding-right: gutter(1 of 12);
+    padding-inline: gutter(1 of 12);
   }
 
   a.btn::before {
     content: '';
     position: absolute;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
+    inset: 0;
   }
 
-  &--left {
+  &--left, &--right {
     position: relative;
-    float: left;
-    margin-left: 0;
-    margin-right: 0;
+    margin-inline: 0;
     width: 100%;
     clear: both;
     font-size: 1.125em;
 
-    .archive__item {
-      float: left;
+    a.btn::before {
+      content: '';
+      position: absolute;
+      inset: 0;
     }
 
     .archive__item-teaser {
       margin-bottom: 2em;
     }
+  }
 
-    a.btn::before {
-      content: '';
-      position: absolute;
-      left: 0;
-      top: 0;
-      right: 0;
-      bottom: 0;
+  &--left {
+    float: inline-start;
+
+    .archive__item {
+      float: inline-start;
     }
 
     @include breakpoint($small) {
       .archive__item-teaser {
-        float: left;
+        float: inline-start;
         width: span(5 of 12);
       }
 
       .archive__item-body {
-        float: right;
-        padding-left: gutter(0.5 of 12);
-        padding-right: gutter(1 of 12);
+        float: inline-end;
         width: span(7 of 12);
+        padding-inline-start: gutter(0.5 of 12);
+        padding-inline-end: gutter(1 of 12);
       }
     }
   }
 
   &--right {
-    position: relative;
-    float: left;
-    margin-left: 0;
-    margin-right: 0;
-    width: 100%;
-    clear: both;
-    font-size: 1.125em;
+    float: inline-end;
 
     .archive__item {
-      float: left;
-    }
-
-    .archive__item-teaser {
-      margin-bottom: 2em;
-    }
-
-    a.btn::before {
-      content: '';
-      position: absolute;
-      left: 0;
-      top: 0;
-      right: 0;
-      bottom: 0;
+      float: inline-end;
     }
 
     @include breakpoint($small) {
-      text-align: right;
+      text-align: end;
 
       .archive__item-teaser {
-        float: right;
+        float: inline-end;
         width: span(5 of 12);
       }
 
       .archive__item-body {
-        float: left;
+        float: inline-start;
         width: span(7 of 12);
-        padding-left: gutter(0.5 of 12);
-        padding-right: gutter(1 of 12);
+        padding-inline-start: gutter(1 of 12);
+        padding-inline-end: gutter(0.5 of 12);
       }
     }
   }
 
   &--center {
     position: relative;
-    float: left;
-    margin-left: 0;
-    margin-right: 0;
+    float: inline-start;
+    margin-inline: 0;
     width: 100%;
     clear: both;
     font-size: 1.125em;
 
     .archive__item {
-      float: left;
+      float: inline-start;
       width: 100%;
     }
 
@@ -394,10 +369,7 @@
     a.btn::before {
       content: '';
       position: absolute;
-      left: 0;
-      top: 0;
-      right: 0;
-      bottom: 0;
+      inset: 0;
     }
 
     @include breakpoint($small) {
@@ -438,14 +410,14 @@
    Wide Pages
    ========================================================================== */
 
-  .wide {
+.wide {
   .archive {
     @include breakpoint($large) {
-      padding-right: 0;
+      padding-inline-end: 0;
     }
 
     @include breakpoint($x-large) {
-      padding-right: 0;
+      padding-inline-end: 0;
     }
   }
 }
@@ -453,11 +425,7 @@
 /* Place inside a single layout */
 
 .layout--single {
-	.feature__wrapper {
-		display: inline-block;
-	}
-}
-
-.taxonomy__index {
-  display: none;
+  .feature__wrapper {
+    display: inline-block;
+  }
 }
