Finished About Me Page

--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -113,6 +113,11 @@ body {
     font-size: 0.8rem; /* Equivalent to 16px */
   }
 
+  p {
+    font-size: 0.7rem;
+    line-height: 1.3rem;
+  }
+
   li {
     font-size: 0.7rem;
   }
