--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -236,9 +236,7 @@
 
 .feature__wrapper {
   @include clearfix();
-  margin-bottom: 2em;
-  border-bottom: 1px solid $border-color;
-
+  margin-bottom: 0;
   .archive__item-title {
     margin-bottom: 0;
   }
@@ -276,7 +274,7 @@
   }
 
   .archive__item-body {
-    padding-inline: gutter(1 of 12);
+    padding: 20px 30px;
   }
 
   a.btn::before {
