--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -7,6 +7,7 @@
   @include clearfix;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 1rem;
   padding-left: 1rem;
   padding-right: 1rem;
   max-width: 100%; /* Default to full width */
