--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
 ---
-
+<link rel="stylesheet" href="{{ '/assets/css/blog.css' | relative_url }}">
 {{ content }}
 
 <ul class="taxonomy__index">
