--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -36,26 +36,26 @@
 
 .project-card img {
   width: 100%;
-  height: 150px; 
+  height: 180px; 
   object-fit: cover;
 }
 
 .project-content {
-  padding: 10px;
+  padding: 20px 15px;
 }
 
 .project-title {
-  font-size: 0.9rem;
+  font-size: 20px;
   font-weight: bold;
-  margin-bottom: 0.2rem;
-  margin-top: 0.4rem;
+  margin-bottom: 6px;
+  margin-top: 6px;
 }
 
 .project-description {
-  font-size: 0.7rem;
+  font-size: 16px;
   color: #ffffff;
-  margin-bottom: 0.2rem;
-  margin-top: 0.2rem;
+  margin-bottom: 3px;
+  margin-top: 3px;
 }
 
 @media (max-width: 768px) {
