--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -71,7 +71,7 @@
 }
 
 .project-card a {
-  color: #8cd2d5; /* Keeps link color consistent */
+  color: #96d7ec; /* Keeps link color consistent */
   text-decoration: none; /* Remove underline for links */
 }
 
