--- a/_includes/page__hero.html
+++ b/_includes/page__hero.html
@@ -19,7 +19,20 @@
 {% assign image_description = image_description | markdownify | strip_html | strip_newlines | escape_once %}
 
 <div class="page__hero{% if page.header.overlay_color or page.header.overlay_image %}--overlay{% endif %}"
-  style="{% if page.header.overlay_color %}background-color: {{ page.header.overlay_color | default: 'transparent' }};{% endif %} {% if overlay_img_path %}background-image: {% if overlay_filter %}{{ overlay_filter }}, {% endif %}url('{{ overlay_img_path }}');{% endif %}"
+  style="
+    {% if page.header.overlay_color %}
+      background-color: {{ page.header.overlay_color | default: 'transparent' }};
+    {% endif %}
+    {% if overlay_img_path %}
+      background-image: {% if overlay_filter %}{{ overlay_filter }}, {% endif %}url('{{ overlay_img_path }}');
+    {% endif %}
+    {% if page.header.background_position %}
+      background-position: {{ page.header.background_position }};
+    {% endif %}
+    {% if page.header.min_height %}
+      min-height: {{ page.header.min_height }};
+    {% endif %}
+  "
 >
   {% if page.header.overlay_color or page.header.overlay_image %}
     <div class="wrapper">
